# opengauss_serverless_demo

./: .gitignore  README.md  cmake_env.sh  logfile  nohup.out
cmake/src/: build_options.cmake  set_thirdparty_path.cmake
contrib/pg_archivecleanup/: pg_archivecleanup
contrib/pg_xlogdump/: cfs_mddesc.cpp  dss_adaptor.cpp  genericdesc.cpp  logicalddlmsgdesc.cpp  replorigindesc.cpp
src/: CMakeLists.txt  Makefile.global.in
src/common/backend/nodes/: outfuncs.cpp  readfuncs.cpp
src/common/port/: fio_device.cpp  fio_dss.cpp
src/gausskernel/: CMakeLists.txt  Makefile
src/gausskernel/optimizer/: CMakeLists.txt  Makefile
src/include/: gs_thread.h  miscadmin.h
src/include/cm/: cm_errcodes.h
src/include/commands/: explain.h
src/include/executor/: executor.h
src/include/knl/: knl_instance.h  knl_session.h  knl_thread.h
src/include/libpq/: libpq-fe.h
src/include/nodes/: plannodes.h  relation.h
src/include/optimizer/: planmain.h
src/include/parser/: kwlist_d.h
src/include/postmaster/: optimizerlisten.h
src/include/utils/: builtins.h  memprot.h
src/include/vecexecutor/: vectorbatch.h
src/include/workload/: workload.h
src/lib/page_compression/: cfs_tools.cpp  checksum_impl.cpp  pg_lzcompress.cpp  pg_lzcompress.h  pgsleep.cpp
storage_server/: Cargo.toml  README.md
storage_server/src/: main.rs
tpch_queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q1_plan.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql  simple_plan.sql  simple_plan_new.sql
(+56 files in other folders)
