[package]
name = "storage_server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
futures = "0.3.31"
libc = "0.2.174"
serde = {version = "1.0.219", features = ["derive"]}
tklog = "0.2.9"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
